increased font size and gap length on buttons for mobile display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,3 +82,15 @@ button {
 #equals:active {
     background-color: var(--orangelight);
 }
+
+@media screen and (max-width: 1000px) {
+    main {
+        gap:3.0vw;
+    };
+    button {
+        font-size: 2.5em;
+    }
+    display {
+        font-size: 8em;;
+    }
+}
